[gd_scene load_steps=7 format=3 uid="uid://ho38ers7rqok"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_dlxyg"]
[ext_resource type="PackedScene" uid="uid://bn6ec5c7ftjue" path="res://assets/models/Orka.blend" id="2_e15fx"]
[ext_resource type="AudioStream" uid="uid://dm52jt4r8wb5f" path="res://assets/orkanoises/Attack.mp3" id="3_cvcn5"]
[ext_resource type="AudioStream" uid="uid://lm51p0ow8vc8" path="res://assets/orkanoises/Orka noise 2.mp3" id="4_bwfmm"]
[ext_resource type="AudioStream" uid="uid://q1r18kbban1q" path="res://assets/orkanoises/Dash SFXFade.mp3" id="5_gbxbf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lf4up"]
height = 3.0

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("ground_raycast_back", "ground_raycast_front")]
script = ExtResource("1_dlxyg")
ground_raycast_back = NodePath("GroundRaycastBack")
ground_raycast_front = NodePath("GroundRaycastFront")

[node name="OrkaBlendModel" parent="." instance=ExtResource("2_e15fx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.932643, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.160047, 0)
shape = SubResource("CapsuleShape3D_lf4up")

[node name="GroundRaycastBack" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
target_position = Vector3(0, -2, 0)

[node name="GroundRaycastFront" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
target_position = Vector3(0, -2, 0)

[node name="BlastCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="AttackNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_cvcn5")
volume_db = 0.2
pitch_scale = 1.36

[node name="Idle1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_bwfmm")
volume_db = 0.2
pitch_scale = 1.39

[node name="DashSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_gbxbf")
volume_db = 0.3
max_db = 1.13
pitch_scale = 0.97
